4727.	[bug]		Retransferring an inline-signed slave using NSEC3
			around the time its NSEC3 salt was changed could result
			in an infinite signing loop. [RT #45080]

4726.	[port]		Prevent setsockopt() errors related to TCP_FASTOPEN
			from being logged on FreeBSD if the kernel does not
			support it.  Notify the user when the kernel does
			support TCP_FASTOPEN, but it is disabled by sysctl.
			Add a new configure option, --disable-tcp-fastopen, to
			disable use of TCP_FASTOPEN altogether. [RT #44754]

4725.	[bug]		Nsupdate: "recvsoa" was incorrectly reported for
			failures in sending the update message.  The correct
			location to be reported is "update_completed".
			[RT #46014]

4724.	[func]		When the random device (i.e. the "random-device"
			option in named.conf, or the -r command line option
			in various tools) is set to "openssl", the OpenSSL
			RAND routine is used as the source of entropy/
			randomness. This is suitable for a virtual
			machine environment without a hardware random
			number generator. This behavior can be overridden
			by using "configure --disable-crypto-rand" or
			native PKCS#11. [RT #31459]

4723.	[bug]		Statistics counter DNSTAPdropped was misidentified
			as DNSSECdropped. [RT #46002]

4722.	[cleanup]	Clean up uses of strcpy() and strcat() in favor of
			strlcpy() and strlcat() for safety. [RT #45981]

4721.	[func]		'dnssec-signzone -x' and 'dnssec-dnskey-kskonly'
			options now apply to CDNSKEY and DS records as well
			as DNSKEY. Thanks to Tony Finch. [RT #45689]

4720.	[func]		Added a statistics counter to track prefetch
			queries. [RT #45847]

4719.	[bug]		Address PVS static analyzer warnings. [RT #45946]

4718.	[func]		Avoid seaching for a owner name compression pointer
			more than once when writing out a RRset. [RT #45802]

4717.	[bug]		Treat replies with QCOUNT=0 as truncated if TC=1,
			FORMERR if TC=0, and log the error correctly.
			[RT #45836]

4716.	[placeholder]

	--- 9.12.0a1 released ---
